--- a/Phylogenetics.ipynb
+++ b/Phylogenetics.ipynb
@@ -253,18 +253,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "v0=-1\n",
-      "p=-2\n",
-      "q-3\n",
-      "h=-4\n",
-      "Dict{Any,Any}(Pair{Any,Any}(4, [-3]),Pair{Any,Any}(-4, [-2, -3, 1, 2]),Pair{Any,Any}(-3, [4, -4, -1]),Pair{Any,Any}(2, [-4]),Pair{Any,Any}(3, [-2]),Pair{Any,Any}(-1, [-2, -3]),Pair{Any,Any}(-2, [3, -4, -1]),Pair{Any,Any}(1, [-4]))\n"
+      "i=1\n",
+      "Dict{Any,Any}(Pair{Any,Any}(4, [-3]),Pair{Any,Any}(-4, [-2, -3, 1, 2]),Pair{Any,Any}(-3, [4, -4, -1]),Pair{Any,Any}(2, [-4]),Pair{Any,Any}(3, [-2]),Pair{Any,Any}(-1, [-2, -3]),Pair{Any,Any}(-2, [3, -4, -1]),Pair{Any,Any}(1, [-4]))\n",
+      "i=2\n",
+      "Dict{Any,Any}(Pair{Any,Any}(4, [-3]),Pair{Any,Any}(-4, [-2, -3, 3]),Pair{Any,Any}(-3, [4, -4, -1]),Pair{Any,Any}(2, [-2]),Pair{Any,Any}(-2, [1, 2, -4, -1]),Pair{Any,Any}(-1, [-2, -3]),Pair{Any,Any}(3, [-4]),Pair{Any,Any}(1, [-2]))\n",
+      "i=3\n",
+      "Dict{Any,Any}(Pair{Any,Any}(4, [-4]),Pair{Any,Any}(-4, [-2, -3, 4]),Pair{Any,Any}(-3, [3, -4, -1]),Pair{Any,Any}(2, [-2]),Pair{Any,Any}(3, [-3]),Pair{Any,Any}(-1, [-2, -3]),Pair{Any,Any}(-2, [1, 2, -4, -1]),Pair{Any,Any}(1, [-2]))\n"
      ]
     }
    ],
@@ -316,39 +317,62 @@
     "#     if 1 and 3 or 2 and 3 are connected then it is consistent.\n",
     "#     let a1 be c and r = addEdge(a2,a3)\n",
     "    c=a1\n",
-    "    adjListR=Dict()\n",
-    "    internalVertex = -1\n",
-    "    v0=internalVertex\n",
-    "    addVertex(adjListR,v0,a2) #3=>-1 and -1=>3,4 and 4=>-1 \n",
-    "    addVertex(adjListR,v0,a3) #3=>-1 and -1=>3,4 and 4=>-1 \n",
-    "        \n",
-    "    internalVertex -= 1\n",
-    "    p=internalVertex\n",
-    "    internalVertex -= 1\n",
-    "    q=internalVertex\n",
-    "    internalVertex -= 1\n",
-    "    h=internalVertex\n",
-    "\n",
-    "    println(\"v0=\",v0)\n",
-    "    println(\"p=\",p)\n",
-    "    println(\"q\",q)\n",
-    "    println(\"h=\",h)\n",
-    "\n",
-    "#     (p,u), (p,h), (q,v),(q,h)\n",
-    "    addVertex(adjListR,p,a2)\n",
-    "    addVertex(adjListR,p,[h])\n",
-    "    addVertex(adjListR,q,a3)\n",
-    "    addVertex(adjListR,q,[h])\n",
-    "    addVertex(adjListR,h,c)\n",
+    "    u=a2\n",
+    "    v=a3\n",
     "    \n",
-    "    addVertex(adjListR,v0,[p])\n",
-    "    addVertex(adjListR,v0,[q])\n",
-    "    removeEdge(adjListR,v0,a2)\n",
-    "    removeEdge(adjListR,v0,a3)\n",
-    "    \n",
-    "    println(adjListR) \n",
+    "    alphas =[a1,a2,a3]\n",
+    "    for i=1:3\n",
+    "        c=alphas[i]\n",
+    "        if(i==1)\n",
+    "            u=alphas[i+1]\n",
+    "            v=alphas[i+2]\n",
+    "            println(\"i=1\")\n",
+    "        elseif(i==2)\n",
+    "            u=alphas[i-1]\n",
+    "            v=alphas[i+1]\n",
+    "             println(\"i=2\")\n",
+    "        else\n",
+    "            u=alphas[i-2]\n",
+    "            v=alphas[i-1]\n",
+    "             println(\"i=3\")\n",
+    "\n",
+    "        end\n",
+    "        adjListR=Dict()\n",
+    "        internalVertex = -1\n",
+    "        v0=internalVertex\n",
+    "        addVertex(adjListR,v0,u) #3=>-1 and -1=>3,4 and 4=>-1 \n",
+    "        addVertex(adjListR,v0,v) #3=>-1 and -1=>3,4 and 4=>-1 \n",
+    "\n",
+    "        internalVertex -= 1\n",
+    "        p=internalVertex\n",
+    "        internalVertex -= 1\n",
+    "        q=internalVertex\n",
+    "        internalVertex -= 1\n",
+    "        h=internalVertex\n",
+    "\n",
+    "#         println(\"v0=\",v0)\n",
+    "#         println(\"p=\",p)\n",
+    "#         println(\"q\",q)\n",
+    "#         println(\"h=\",h)\n",
+    "\n",
+    "    #     (p,u), (p,h), (q,v),(q,h)\n",
+    "        addVertex(adjListR,p,u)\n",
+    "        addVertex(adjListR,p,[h])\n",
+    "        addVertex(adjListR,q,v)\n",
+    "        addVertex(adjListR,q,[h])\n",
+    "        addVertex(adjListR,h,c)\n",
+    "\n",
+    "        addVertex(adjListR,v0,[p])\n",
+    "        addVertex(adjListR,v0,[q])\n",
+    "        removeEdge(adjListR,v0,u)\n",
+    "        removeEdge(adjListR,v0,v)\n",
+    "\n",
+    "        println(adjListR) \n",
+    "    end\n",
     "end\n",
-    "oneHybridLeaf()"
+    "oneHybridLeaf()\n",
+    "\n",
+    "\n"
    ]
   },
   {
