--- a/Untitled1.ipynb
+++ b/Untitled1.ipynb
@@ -91,6 +91,141 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "initial depth =1\n",
+      "vals =[5]\n",
+      "else depth: 2\n",
+      "Going to: 5\n",
+      "calling depth: 2\n",
+      "initial depth =2\n",
+      "vals =[2, 6, 7]\n",
+      "else depth: 3\n",
+      "Going to: 2\n",
+      "calling depth: 3\n",
+      "initial depth =3\n",
+      "vals =[5]\n",
+      "Going back\n",
+      "\n",
+      "returning depth: 2\n",
+      "Going to: 6\n",
+      "calling depth: 2\n",
+      "initial depth =2\n",
+      "vals =[4, 5, 8]\n",
+      "else depth: 3\n",
+      "Going to: 4\n",
+      "calling depth: 3\n",
+      "initial depth =3\n",
+      "vals =[6]\n",
+      "Going back\n",
+      "\n",
+      "returning depth: 2\n",
+      "Going to: 8\n",
+      "calling depth: 2\n",
+      "initial depth =2\n",
+      "vals =[6, 7]\n",
+      "else depth: 3\n",
+      "Going to: 7\n",
+      "calling depth: 3\n",
+      "initial depth =3\n",
+      "vals =[3, 5, 8]\n",
+      "else depth: 4\n",
+      "Going to: 3\n",
+      "calling depth: 4\n",
+      "initial depth =4\n",
+      "vals =[7]\n",
+      "Going back\n",
+      "\n",
+      "returning depth: 3\n",
+      "[0 3 4 3 1 2 3 2; 3 0 0 0 1 0 0 0; 4 0 0 0 0 0 1 0; 3 0 0 0 0 1 0 0; 1 1 0 0 0 1 1 0; 2 0 0 1 1 0 0 1; 3 0 1 0 1 0 0 1; 2 0 0 0 0 1 1 0]\n"
+     ]
+    }
+   ],
+   "source": [
+    "aList=[0 0 0 0 1 0 0 0; 0 0 0 0 1 0 0 0; 0 0 0 0 0 0 1 0; 0 0 0 0 0 1 0 0; 1 1 0 0 0 1 1 0; 0 0 0 1 1 0 0 1; 0 0 1 0 1 0 0 1; 0 0 0 0 0 1 1 0]\n",
+    "visited=[]\n",
+    "distMatrix= copy(aList)\n",
+    "depth=1\n",
+    "function distFunc(list, inNode,firstNode)\n",
+    "#     for i=1: length(list[:,1]) # To reads the first row\n",
+    "#     end\n",
+    "    \n",
+    "    println(\"initial depth =\",depth)\n",
+    "    vals= collect(i for i=firstNode+1: length(list[:,1]) if list[inNode,i]==1) #check if row \n",
+    "    \n",
+    "                println(\"vals =\",vals)\n",
+    "\n",
+    "                for p in visited\n",
+    "        \n",
+    "                    filter!(x -> x!=p,vals)\n",
+    "    \n",
+    "                end\n",
+    "#     println(\"firstNode: \",firstNode)\n",
+    "#     println(\"\\n\\nvals: \",vals)\n",
+    "#     println(\"visited: \", visited)\n",
+    "    \n",
+    "                if length(vals)==0 && depth > 0\n",
+    "        \n",
+    "                    global depth-=1\n",
+    "        \n",
+    "                    println(\"Going back\\n\")\n",
+    "        \n",
+    "                    println(\"returning depth: \", depth)\n",
+    "        \n",
+    "                    return\n",
+    "    \n",
+    "                else\n",
+    "            \n",
+    "                    global depth+=1\n",
+    "                            \n",
+    "                    println(\"else depth: \", depth)\n",
+    "\n",
+    "        for j in vals\n",
+    "            append!(visited, inNode)\n",
+    "                        \n",
+    "            if(j==7 && depth ==5)\n",
+    "                println(\"firstNodeBug= \" ,firstNode, \"depth = \",depth) \n",
+    "                            \n",
+    "            end\n",
+    "                        \n",
+    "            distMatrix[firstNode, j]= depth\n",
+    "#             println(\"depth at j=\",j,\"depth=\",depth)\n",
+    "            distMatrix[j,firstNode]= depth\n",
+    "            distMatrix[inNode, j]= 1\n",
+    "            distMatrix[j,inNode]= 1\n",
+    "#             println(\"Inside for\")\n",
+    "            \n",
+    "            if !(j in visited)\n",
+    "#                 global depth+=1\n",
+    "#               println(\"Inside if\\n\")\n",
+    "                println(\"Going to: \", j )\n",
+    "                println(\"calling depth: \", depth)                \n",
+    "                distFunc(list, j, firstNode)\n",
+    "            end\n",
+    "        end\n",
+    "    end\n",
+    "end\n",
+    "            \n",
+    "            \n",
+    "# for i=1:length(aList[:,1])   \n",
+    "#     visited=[]\n",
+    "#     depth=0\n",
+    "#     println(\"first node=\",i)\n",
+    "#     distFunc(aList, i, i)\n",
+    "# end\n",
+    "            \n",
+    "            \n",
+    "  distFunc(aList, 1, 1)\n",
+    "println(distMatrix)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 35,
    "metadata": {},
    "outputs": [
