--- a/Untitled.ipynb
+++ b/Untitled.ipynb
@@ -390,6 +390,44 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Consistent=false\n"
+     ]
+    }
+   ],
+   "source": [
+    "function checkConsistency(floydWarshall)\n",
+    "   # Given Floyd warshall matrix and adjacency matrix\n",
+    "   #Given Triplets\n",
+    "    \n",
+    "   \n",
+    "\n",
+    "    T= [[1,2,3], [1,2,4], [1,2,5], [2,3,4], [3,4,2], [2,3,5], [3,4,5], [1,3,4], [3,4,1], [1,3,5], [1,4,5], [2,4,5],[2,1,3]]\n",
+    "    #-1 -2 -3 -4 1234 +9 = 1234 5678\n",
+    "    # we need to know 1234 are the positive nodes.\n",
+    "    # check distance of 12, 23, 13 in the floyd warshall and similarly 12 24 14\n",
+    "    consistent = true\n",
+    "    for i in T\n",
+    "            if(floydWarshall[i[1],i[2]]  >= floydWarshall[i[1],i[3]]  && floydWarshall[i[1],i[2]]  >= floydWarshall[i[2],i[3]])\n",
+    "                    consistent = false\n",
+    "                    break\n",
+    "            end\n",
+    "    end \n",
+    "    \n",
+    "    println(\"Consistent=\",consistent)\n",
+    "end\n",
+    " floydWarshall= [0 2 3 3 1 2 2 3; 2 0 3 3 1 2 2 3; 3 3 0 4 2 3 1 2; 3 3 4 0 2 1 3 2; 1 1 2 2 0 1 1 2; 2 2 3 1 1 0 2 1; 2 2 1 3 1 2 0 1; 3 3 2 2 2 1 1 0]\n",
+    "checkConsistency(floydWarshall)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 45,
    "metadata": {},
    "outputs": [
