--- a/Untitled.ipynb
+++ b/Untitled.ipynb
@@ -73,319 +73,41 @@
     "#          3 3 4 4 2 1 1 0] \n",
     "\n",
     "graph =[0 2 5 3 1 2 4 3; 2 0 5 3 1 2 4 3; 5 5 0 4 2 3 1 4; 3 3 4 0 2 1 3 4; 1 1 2 2 0 1 1 2; 2 2 3 1 1 0 2 1; 4 4 1 3 1 2 0 1; 3 3 4 4 2 1 1 0]\n",
-    "\n",
+    "        \n",
     "print(floydWarshall(graph))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "distMatrix[0 0 0 0 1 0 0 0; 0 0 0 0 1 0 0 0; 0 0 0 0 0 0 1 0; 0 0 0 0 0 1 0 0; 1 1 0 0 0 1 1 0; 0 0 0 1 1 0 0 1; 0 0 1 0 1 0 0 1; 0 0 0 0 0 1 1 0]\n",
       "NODE=1\n",
-      "----------------\n",
-      "vals: [5]\n",
-      "visited: Any[1]\n",
-      "Going to: 5\n",
-      "Calling depth: 1\n",
-      "----------------\n",
-      "vals: [2, 6, 7]\n",
-      "visited: Any[1, 5]\n",
-      "Graph depth: 2\n",
-      "Appending value: 1 2\n",
-      "Going to: 2\n",
-      "Calling depth: 2\n",
-      "----------------\n",
-      "vals: Int64[]\n",
-      "visited: Any[1, 5, 2]\n",
-      "current Depth: 3\n",
-      "Returning depth: 2\n",
-      "Graph depth: 2\n",
-      "Appending value: 1 6\n",
-      "Going to: 6\n",
-      "Calling depth: 2\n",
-      "----------------\n",
-      "vals: [4, 8]\n",
-      "visited: Any[1, 5, 2, 6]\n",
-      "Graph depth: 3\n",
-      "Appending value: 1 4\n",
-      "Going to: 4\n",
-      "Calling depth: 3\n",
-      "----------------\n",
-      "vals: Int64[]\n",
-      "visited: Any[1, 5, 2, 6, 4]\n",
-      "current Depth: 4\n",
-      "Returning depth: 3\n",
-      "Graph depth: 3\n",
-      "Appending value: 1 8\n",
-      "Going to: 8\n",
-      "Calling depth: 3\n",
-      "----------------\n",
-      "vals: [7]\n",
-      "visited: Any[1, 5, 2, 6, 4, 8]\n",
-      "Graph depth: 4\n",
-      "Appending value: 1 7\n",
-      "Going to: 7\n",
-      "Calling depth: 4\n",
-      "----------------\n",
-      "vals: [3]\n",
-      "visited: Any[1, 5, 2, 6, 4, 8, 7]\n",
-      "Graph depth: 5\n",
-      "Appending value: 1 3\n",
-      "Going to: 3\n",
-      "Calling depth: 5\n",
-      "----------------\n",
-      "vals: Int64[]\n",
-      "visited: Any[1, 5, 2, 6, 4, 8, 7, 3]\n",
-      "current Depth: 6\n",
-      "Returning depth: 5\n",
       "NODE=2\n",
-      "----------------\n",
-      "vals: [5]\n",
-      "visited: Any[2]\n",
-      "Going to: 5\n",
-      "Calling depth: 1\n",
-      "----------------\n",
-      "vals: [6, 7]\n",
-      "visited: Any[2, 5]\n",
-      "Graph depth: 2\n",
-      "Appending value: 2 6\n",
-      "Going to: 6\n",
-      "Calling depth: 2\n",
-      "----------------\n",
-      "vals: [4, 8]\n",
-      "visited: Any[2, 5, 6]\n",
-      "Graph depth: 3\n",
-      "Appending value: 2 4\n",
-      "Going to: 4\n",
-      "Calling depth: 3\n",
-      "----------------\n",
-      "vals: Int64[]\n",
-      "visited: Any[2, 5, 6, 4]\n",
-      "current Depth: 4\n",
-      "Returning depth: 3\n",
-      "Graph depth: 3\n",
-      "Appending value: 2 8\n",
-      "Going to: 8\n",
-      "Calling depth: 3\n",
-      "----------------\n",
-      "vals: [7]\n",
-      "visited: Any[2, 5, 6, 4, 8]\n",
-      "Graph depth: 4\n",
-      "Appending value: 2 7\n",
-      "Going to: 7\n",
-      "Calling depth: 4\n",
-      "----------------\n",
-      "vals: [3]\n",
-      "visited: Any[2, 5, 6, 4, 8, 7]\n",
-      "Graph depth: 5\n",
-      "Appending value: 2 3\n",
-      "Going to: 3\n",
-      "Calling depth: 5\n",
-      "----------------\n",
-      "vals: Int64[]\n",
-      "visited: Any[2, 5, 6, 4, 8, 7, 3]\n",
-      "current Depth: 6\n",
-      "Returning depth: 5\n",
       "NODE=3\n",
-      "----------------\n",
-      "vals: [7]\n",
-      "visited: Any[3]\n",
-      "Going to: 7\n",
-      "Calling depth: 1\n",
-      "----------------\n",
-      "vals: [5, 8]\n",
-      "visited: Any[3, 7]\n",
-      "Graph depth: 2\n",
-      "Appending value: 3 5\n",
-      "Going to: 5\n",
-      "Calling depth: 2\n",
-      "----------------\n",
-      "vals: [6]\n",
-      "visited: Any[3, 7, 5]\n",
-      "Graph depth: 3\n",
-      "Appending value: 3 6\n",
-      "Going to: 6\n",
-      "Calling depth: 3\n",
-      "----------------\n",
-      "vals: [4, 8]\n",
-      "visited: Any[3, 7, 5, 6]\n",
-      "Graph depth: 4\n",
-      "Appending value: 3 4\n",
-      "Going to: 4\n",
-      "Calling depth: 4\n",
-      "----------------\n",
-      "vals: Int64[]\n",
-      "visited: Any[3, 7, 5, 6, 4]\n",
-      "current Depth: 5\n",
-      "Returning depth: 4\n",
-      "Graph depth: 4\n",
-      "Appending value: 3 8\n",
-      "Going to: 8\n",
-      "Calling depth: 4\n",
-      "----------------\n",
-      "vals: Int64[]\n",
-      "visited: Any[3, 7, 5, 6, 4, 8]\n",
-      "current Depth: 5\n",
-      "Returning depth: 4\n",
       "NODE=4\n",
-      "----------------\n",
-      "vals: [6]\n",
-      "visited: Any[4]\n",
-      "Going to: 6\n",
-      "Calling depth: 1\n",
-      "----------------\n",
-      "vals: [5, 8]\n",
-      "visited: Any[4, 6]\n",
-      "Graph depth: 2\n",
-      "Appending value: 4 5\n",
-      "Going to: 5\n",
-      "Calling depth: 2\n",
-      "----------------\n",
-      "vals: [7]\n",
-      "visited: Any[4, 6, 5]\n",
-      "Graph depth: 3\n",
-      "Appending value: 4 7\n",
-      "Going to: 7\n",
-      "Calling depth: 3\n",
-      "----------------\n",
-      "vals: [8]\n",
-      "visited: Any[4, 6, 5, 7]\n",
-      "Graph depth: 4\n",
-      "Appending value: 4 8\n",
-      "Going to: 8\n",
-      "Calling depth: 4\n",
-      "----------------\n",
-      "vals: Int64[]\n",
-      "visited: Any[4, 6, 5, 7, 8]\n",
-      "current Depth: 5\n",
-      "Returning depth: 4\n",
       "NODE=5\n",
-      "----------------\n",
-      "vals: [6, 7]\n",
-      "visited: Any[5]\n",
-      "Going to: 6\n",
-      "Calling depth: 1\n",
-      "----------------\n",
-      "vals: [8]\n",
-      "visited: Any[5, 6]\n",
-      "Graph depth: 2\n",
-      "Appending value: 5 8\n",
-      "Going to: 8\n",
-      "Calling depth: 2\n",
-      "----------------\n",
-      "vals: [7]\n",
-      "visited: Any[5, 6, 8]\n",
-      "Going to: 7\n",
-      "Calling depth: 3\n",
-      "----------------\n",
-      "vals: Int64[]\n",
-      "visited: Any[5, 6, 8, 7]\n",
-      "current Depth: 4\n",
-      "Returning depth: 3\n",
       "NODE=6\n",
-      "----------------\n",
-      "vals: [8]\n",
-      "visited: Any[6]\n",
-      "Going to: 8\n",
-      "Calling depth: 1\n",
-      "----------------\n",
-      "vals: [7]\n",
-      "visited: Any[6, 8]\n",
-      "Graph depth: 2\n",
-      "Appending value: 6 7\n",
-      "Going to: 7\n",
-      "Calling depth: 2\n",
-      "----------------\n",
-      "vals: Int64[]\n",
-      "visited: Any[6, 8, 7]\n",
-      "current Depth: 3\n",
-      "Returning depth: 2\n",
       "NODE=7\n",
-      "----------------\n",
-      "vals: [8]\n",
-      "visited: Any[7]\n",
-      "Going to: 8\n",
-      "Calling depth: 1\n",
-      "----------------\n",
-      "vals: Int64[]\n",
-      "visited: Any[7, 8]\n",
-      "current Depth: 2\n",
-      "Returning depth: 1\n",
       "NODE=8\n",
-      "----------------\n",
-      "vals: Int64[]\n",
-      "visited: Any[8]\n",
-      "current Depth: 1\n",
-      "Returning depth: 0\n",
-      "[0 2 5 3 1 2 4 3; 2 0 5 3 1 2 4 3; 5 5 0 4 2 3 1 4; 3 3 4 0 2 1 3 4; 1 1 2 2 0 1 1 2; 2 2 3 1 1 0 2 1; 4 4 1 3 1 2 0 1; 3 3 4 4 2 1 1 0]\n"
+      "[0 2 4 3 1 2 3 0; 2 0 0 0 1 0 0 0; 4 0 0 0 0 0 1 0; 3 0 0 0 0 1 0 0; 1 1 0 0 0 1 1 0; 2 0 0 1 1 0 2 1; 3 0 1 0 1 2 0 1; 0 0 0 0 0 1 1 0]\n"
      ]
     }
    ],
    "source": [
-    "aList=[0 0 0 0 1 0 0 0; 0 0 0 0 1 0 0 0; 0 0 0 0 0 0 1 0; 0 0 0 0 0 1 0 0; 1 1 0 0 0 1 1 0; 0 0 0 1 1 0 0 1; 0 0 1 0 1 0 0 1; 0 0 0 0 0 1 1 0]\n",
-    "visited=[]\n",
-    "distMatrix= copy(aList)\n",
-    "depth=0\n",
-    "function distFunc(list, inNode,firstNode)\n",
-    "#     for i=1: length(list[:,1]) # To reads the first row\n",
-    "#     end\n",
-    "    println(\"----------------\")\n",
-    "    global depth+=1\n",
-    "    vals= collect(i for i=firstNode+1: length(list[:,1]) if list[inNode,i]==1)\n",
-    "    for p in visited\n",
-    "        filter!(x -> x!=p,vals)\n",
-    "    end\n",
-    "    append!(visited, inNode)\n",
-    "#     println(\"firstNode: \",firstNode)\n",
-    "    println(\"vals: \",vals)\n",
-    "    println(\"visited: \", visited)\n",
-    "    if length(vals)==0 \n",
-    "        println(\"current Depth: \", depth)\n",
-    "        global depth-=1\n",
-    "#         println(\"Going back\\n\")\n",
-    "        println(\"Returning depth: \", depth)\n",
-    "        return\n",
-    "    else\n",
-    "        \n",
-    "        for j in vals\n",
-    "            \n",
-    "#             append!(visited, inNode)\n",
-    "            if(distMatrix[firstNode, j]==0)\n",
-    "                println(\"Graph depth: \", depth)\n",
-    "                println(\"Appending value: \", firstNode,\" \", j)\n",
-    "                distMatrix[firstNode, j]= depth\n",
-    "                distMatrix[j,firstNode]= depth\n",
-    "                distMatrix[inNode, j]= 1\n",
-    "                distMatrix[j,inNode]= 1\n",
-    "#             println(\"Inside for\")\n",
-    "            end\n",
-    "            if !(j in visited)\n",
-    "               \n",
-    "#               println(\"Inside if\\n\")\n",
-    "                println(\"Going to: \", j )\n",
-    "                println(\"Calling depth: \", depth)\n",
-    "#                 append!(visited, inNode)\n",
-    "#                 println(distMatrix)\n",
-    "                distFunc(list, j, firstNode)\n",
-    "            end\n",
-    "        end\n",
-    "    end\n",
-    "end\n",
-    "            \n",
-    "            \n",
-    "for i=1:length(aList[:,1])   \n",
-    "    visited=[]\n",
-    "    depth=0\n",
-    "    println(\"NODE=\", i)\n",
-    "    distFunc(aList, i, i)\n",
-    "end\n",
-    "# distFunc(aList, 1, 1)\n",
-    "println(distMatrix)"
+    "include(\"DistanceMatrix.jl\")\n",
+    "\n",
+    "aList = [0 0 0 0 1 0 0 0; 0 0 0 0 1 0 0 0; 0 0 0 0 0 0 1 0; 0 0 0 0 0 1 0 0; 1 1 0 0 0 1 1 0; 0 0 0 1 1 0 0 1; 0 0 1 0 1 0 0 1; 0 0 0 0 0 1 1 0]\n",
+    "\n",
+    "# Make the Set method to work 1st August\n",
+    "setAdjacencyList(aList)\n",
+    "\n",
+    "println(returnDistanceMatrix())"
    ]
   },
   {
@@ -402,6 +124,8 @@
     }
    ],
    "source": [
+    "# Incomplete- to be tested\n",
+    "\n",
     "function checkConsistency(floydWarshall)\n",
     "   # Given Floyd warshall matrix and adjacency matrix\n",
     "   #Given Triplets\n",
