--- a/Untitled.ipynb
+++ b/Untitled.ipynb
@@ -79,21 +79,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "metadata": {
     "scrolled": true
    },
    "outputs": [
     {
-     "ename": "LoadError",
-     "evalue": "LoadError: \u001b[91msyntax: `global depth`: depth is local variable in the enclosing scope\u001b[39m\nwhile loading C:\\Users\\hsingh9\\Documents\\GitHub\\PhylogeneticNetworks\\DistanceMatrix.jl, in expression starting on line 13",
-     "output_type": "error",
-     "traceback": [
-      "LoadError: \u001b[91msyntax: `global depth`: depth is local variable in the enclosing scope\u001b[39m\nwhile loading C:\\Users\\hsingh9\\Documents\\GitHub\\PhylogeneticNetworks\\DistanceMatrix.jl, in expression starting on line 13",
-      "",
-      "Stacktrace:",
-      " [1] \u001b[1minclude_from_node1\u001b[22m\u001b[22m\u001b[1m(\u001b[22m\u001b[22m::String\u001b[1m)\u001b[22m\u001b[22m at \u001b[1m.\\loading.jl:576\u001b[22m\u001b[22m",
-      " [2] \u001b[1minclude\u001b[22m\u001b[22m\u001b[1m(\u001b[22m\u001b[22m::String\u001b[1m)\u001b[22m\u001b[22m at \u001b[1m.\\sysimg.jl:14\u001b[22m\u001b[22m"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "distMatrix[0 0 0 0 1 0 0 0; 0 0 0 0 1 0 0 0; 0 0 0 0 0 0 1 0; 0 0 0 0 0 1 0 0; 1 1 0 0 0 1 1 0; 0 0 0 1 1 0 0 1; 0 0 1 0 1 0 0 1; 0 0 0 0 0 1 1 0]\n",
+      "[0 2 5 3 1 2 4 3; 2 0 5 3 1 2 4 3; 5 5 0 4 2 3 1 4; 3 3 4 0 2 1 3 4; 1 1 2 2 0 1 1 2; 2 2 3 1 1 0 2 1; 4 4 1 3 1 2 0 1; 3 3 4 4 2 1 1 0]\n"
      ]
     }
    ],
@@ -117,8 +113,7 @@
     "      \n",
     "println(operateDistMatrix(aList))\n",
     "\n",
-    "\n",
-    "# Step 1) Fix Distance Matrix algorithm and make it reusable\n",
+    "# Step 1) Fix Distance Matrix algorithm and make it reusable -- done by Naman\n",
     "# Step 2) Make OneHybridleaf work for multiple adjacency list\n",
     "# Step 3) Check for consistent adjacency List\n"
    ]
