--- a/Phylogenetics.ipynb
+++ b/Phylogenetics.ipynb
@@ -252,7 +252,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 2,
    "metadata": {
     "scrolled": false
    },
@@ -279,7 +279,7 @@
       "listToMatrix == [0 0 0 0 0 0 0 0; 0 0 0 0 0 0 0 0; 0 0 0 0 0 0 0 0; 0 0 0 0 0 0 0 0; 0 0 0 0 0 0 0 0; 0 0 0 0 0 0 0 0; 0 0 0 0 0 0 0 0; 0 0 0 0 0 0 0 0]\n",
       "AdjacencyMatrix = [0 0 0 0 1 0 0 0; 0 0 0 0 1 0 0 0; 0 0 0 0 0 0 1 0; 0 0 0 0 0 1 0 0; 1 1 0 0 0 1 1 0; 0 0 0 1 1 0 0 1; 0 0 1 0 1 0 0 1; 0 0 0 0 0 1 1 0]\n",
       "distMatrix[0 0 0 0 1 0 0 0; 0 0 0 0 1 0 0 0; 0 0 0 0 0 0 1 0; 0 0 0 0 0 1 0 0; 1 1 0 0 0 1 1 0; 0 0 0 1 1 0 0 1; 0 0 1 0 1 0 0 1; 0 0 0 0 0 1 1 0]\n",
-      "distance matrix = [0 2 5 3 1 2 4 3; 2 0 0 0 1 0 0 0; 5 0 0 0 0 0 1 0; 3 0 0 0 0 1 0 0; 1 1 0 0 0 1 0 0; 2 0 0 1 1 0 0 1; 4 0 1 0 0 0 0 1; 3 0 0 0 0 1 1 0]\n"
+      "distance matrix = [0 2 5 3 1 2 4 3; 2 0 5 3 1 2 4 3; 5 5 0 4 2 3 1 4; 3 3 4 0 2 1 3 4; 1 1 2 2 0 1 1 2; 2 2 3 1 1 0 2 1; 4 4 1 3 1 2 0 1; 3 3 4 4 2 1 1 0]\n"
      ]
     }
    ],
@@ -293,11 +293,20 @@
     "    for i=1:length(aList[:,1])\n",
     "        visited=[]\n",
     "        depth=0\n",
-    "        distFunc(aList, i, i)\n",
+    "        distFunc(aList, i, i,visited,depth)\n",
     "    end\n",
     "\n",
     "    return (returnDistanceMatrix())\n",
     "end\n",
+    "        \n",
+    "# aList = [0 0 0 0 1 0 0 0; 0 0 0 0 1 0 0 0; 0 0 0 0 0 0 1 0; 0 0 0 0 0 1 0 0; 1 1 0 0 0 1 1 0; 0 0 0 1 1 0 0 1; 0 0 1 0 1 0 0 1; 0 0 0 0 0 1 1 0]\n",
+    "      \n",
+    "# println(operateDistMatrix(aList))\n",
+    "\n",
+    "# Step 1) Fix Distance Matrix algorithm and make it reusable -- done by Naman\n",
+    "# Step 2) Make OneHybridleaf work for multiple adjacency list\n",
+    "# Step 3) Check for consistent adjacency List\n",
+    "\n",
     "        \n",
     "#  Floyd Warshall Test with real data\n",
     "function floydWarshall(dists)  # graph is 4x4\n",
