parsed adjlists containing multiples lists of dictionaries

--- a/Untitled.ipynb
+++ b/Untitled.ipynb
@@ -280,10 +280,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 41,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "array of Dicts= Dict{Int64,Array}(Pair{Int64,Array}(1, [1]))\n"
+     ]
+    }
+   ],
+   "source": [
+    "testDictionary = Dict(zip([1], [[1]]))\n",
+    "\n",
+    "arrOfDicts = fill!(Array{Dict{Int64,Array}}(3), testDictionary)\n",
+    "\n",
+    "println(\"array of Dicts= \", arrOfDicts[2])"
+   ]
   },
   {
    "cell_type": "code",
