--- a/Phylogenetics.ipynb
+++ b/Phylogenetics.ipynb
@@ -252,7 +252,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 23,
    "metadata": {
     "scrolled": false
    },
@@ -269,12 +269,64 @@
       "received adjlist from onehybrid leafDict{Int64,Array}[Dict{Int64,Array}(Pair{Int64,Array}(4, [-3]),Pair{Int64,Array}(-4, [-2, -3, 1, 2]),Pair{Int64,Array}(-3, [4, -4, -1]),Pair{Int64,Array}(2, [-4]),Pair{Int64,Array}(3, [-2]),Pair{Int64,Array}(-1, [-2, -3]),Pair{Int64,Array}(-2, [3, -4, -1]),Pair{Int64,Array}(1, [-4])), Dict{Int64,Array}(Pair{Int64,Array}(4, [-3]),Pair{Int64,Array}(-4, [-2, -3, 3]),Pair{Int64,Array}(-3, [4, -4, -1]),Pair{Int64,Array}(2, [-2]),Pair{Int64,Array}(-2, [1, 2, -4, -1]),Pair{Int64,Array}(-1, [-2, -3]),Pair{Int64,Array}(3, [-4]),Pair{Int64,Array}(1, [-2])), Dict{Int64,Array}(Pair{Int64,Array}(4, [-4]),Pair{Int64,Array}(-4, [-2, -3, 4]),Pair{Int64,Array}(-3, [3, -4, -1]),Pair{Int64,Array}(2, [-2]),Pair{Int64,Array}(3, [-3]),Pair{Int64,Array}(-1, [-2, -3]),Pair{Int64,Array}(-2, [1, 2, -4, -1]),Pair{Int64,Array}(1, [-2]))]\n",
       "--------------------------\n",
       "--\n",
-      "adjList123=Dict{Int64,Array}(Pair{Int64,Array}(4, [-3]),Pair{Int64,Array}(-4, [-2, -3, 1, 2]),Pair{Int64,Array}(-3, [4, -4, -1]),Pair{Int64,Array}(2, [-4]),Pair{Int64,Array}(3, [-2]),Pair{Int64,Array}(-1, [-2, -3]),Pair{Int64,Array}(-2, [3, -4, -1]),Pair{Int64,Array}(1, [-4]))--\n",
+      "adjList123=Dict{Int64,Array}(Pair{Int64,Array}(4, [-3]),Pair{Int64,Array}(-4, [-2, -3, 1, 2]),Pair{Int64,Array}(-3, [4, -4, -1]),Pair{Int64,Array}(2, [-4]),Pair{Int64,Array}(3, [-2]),Pair{Int64,Array}(-1, [-2, -3]),Pair{Int64,Array}(-2, [3, -4, -1]),Pair{Int64,Array}(1, [-4]))---------------------\n",
+      "---------------------\n",
+      "---------------------\n",
+      "---------------------\n",
+      "---------------------\n",
+      "---------------------\n",
+      "---------------------\n",
+      "---------------------\n",
+      "updated List == Dict{Int64,Array}(Pair{Int64,Array}(7, [3, 5, 8]),Pair{Int64,Array}(4, [6]),Pair{Int64,Array}(2, [5]),Pair{Int64,Array}(3, [7]),Pair{Int64,Array}(5, [7, 6, 1, 2]),Pair{Int64,Array}(8, [7, 6]),Pair{Int64,Array}(6, [4, 5, 8]),Pair{Int64,Array}(1, [5]))\n",
+      "length of list: 8\n",
+      "listToMatrix == [0 0 0 0 0 0 0 0; 0 0 0 0 0 0 0 0; 0 0 0 0 0 0 0 0; 0 0 0 0 0 0 0 0; 0 0 0 0 0 0 0 0; 0 0 0 0 0 0 0 0; 0 0 0 0 0 0 0 0; 0 0 0 0 0 0 0 0]\n",
+      "Matrix1: [0 0 0 0 1 0 0 0; 0 0 0 0 1 0 0 0; 0 0 0 0 0 0 1 0; 0 0 0 0 0 1 0 0; 1 1 0 0 0 1 1 0; 0 0 0 1 1 0 0 1; 0 0 1 0 1 0 0 1; 0 0 0 0 0 1 1 0]\n",
+      "distMatrix[0 0 0 0 1 0 0 0; 0 0 0 0 1 0 0 0; 0 0 0 0 0 0 1 0; 0 0 0 0 0 1 0 0; 1 1 0 0 0 1 1 0; 0 0 0 1 1 0 0 1; 0 0 1 0 1 0 0 1; 0 0 0 0 0 1 1 0]\n",
+      "Matrix2: [0 2 5 3 1 2 4 3; 2 0 5 3 1 2 4 3; 5 5 0 4 2 3 1 4; 3 3 4 0 2 1 3 4; 1 1 2 2 0 1 1 2; 2 2 3 1 1 0 2 1; 4 4 1 3 1 2 0 1; 3 3 4 4 2 1 1 0]\n",
+      "Initial[0 2 5 3 1 2 4 3; 2 0 5 3 1 2 4 3; 5 5 0 4 2 3 1 4; 3 3 4 0 2 1 3 4; 1 1 2 2 0 1 1 2; 2 2 3 1 1 0 2 1; 4 4 1 3 1 2 0 1; 3 3 4 4 2 1 1 0]\n",
+      "Floyd[0 2 3 3 1 2 2 3; 2 0 3 3 1 2 2 3; 3 3 0 4 2 3 1 2; 3 3 4 0 2 1 3 2; 1 1 2 2 0 1 1 2; 2 2 3 1 1 0 2 1; 2 2 1 3 1 2 0 1; 3 3 2 2 2 1 1 0]\n",
+      "----\n",
+      "---\n",
       "--\n",
-      "adjList123=Dict{Int64,Array}(Pair{Int64,Array}(4, [-3]),Pair{Int64,Array}(-4, [-2, -3, 3]),Pair{Int64,Array}(-3, [4, -4, -1]),Pair{Int64,Array}(2, [-2]),Pair{Int64,Array}(-2, [1, 2, -4, -1]),Pair{Int64,Array}(-1, [-2, -3]),Pair{Int64,Array}(3, [-4]),Pair{Int64,Array}(1, [-2]))--\n",
+      "adjList123=Dict{Int64,Array}(Pair{Int64,Array}(4, [-3]),Pair{Int64,Array}(-4, [-2, -3, 3]),Pair{Int64,Array}(-3, [4, -4, -1]),Pair{Int64,Array}(2, [-2]),Pair{Int64,Array}(-2, [1, 2, -4, -1]),Pair{Int64,Array}(-1, [-2, -3]),Pair{Int64,Array}(3, [-4]),Pair{Int64,Array}(1, [-2]))---------------------\n",
+      "---------------------\n",
+      "---------------------\n",
+      "---------------------\n",
+      "---------------------\n",
+      "---------------------\n",
+      "---------------------\n",
+      "---------------------\n",
+      "updated List == Dict{Int64,Array}(Pair{Int64,Array}(7, [1, 2, 5, 8]),Pair{Int64,Array}(4, [6]),Pair{Int64,Array}(2, [7]),Pair{Int64,Array}(3, [5]),Pair{Int64,Array}(5, [7, 6, 3]),Pair{Int64,Array}(8, [7, 6]),Pair{Int64,Array}(6, [4, 5, 8]),Pair{Int64,Array}(1, [7]))\n",
+      "length of list: 8\n",
+      "listToMatrix == [0 0 0 0 0 0 0 0; 0 0 0 0 0 0 0 0; 0 0 0 0 0 0 0 0; 0 0 0 0 0 0 0 0; 0 0 0 0 0 0 0 0; 0 0 0 0 0 0 0 0; 0 0 0 0 0 0 0 0; 0 0 0 0 0 0 0 0]\n",
+      "Matrix1: [0 0 0 0 0 0 1 0; 0 0 0 0 0 0 1 0; 0 0 0 0 1 0 0 0; 0 0 0 0 0 1 0 0; 0 0 1 0 0 1 1 0; 0 0 0 1 1 0 0 1; 1 1 0 0 1 0 0 1; 0 0 0 0 0 1 1 0]\n",
+      "distMatrix[0 0 0 0 0 0 1 0; 0 0 0 0 0 0 1 0; 0 0 0 0 1 0 0 0; 0 0 0 0 0 1 0 0; 0 0 1 0 0 1 1 0; 0 0 0 1 1 0 0 1; 1 1 0 0 1 0 0 1; 0 0 0 0 0 1 1 0]\n",
+      "Matrix2: [0 2 3 3 1 2 2 3; 2 0 3 3 1 2 2 3; 3 3 0 4 2 3 1 2; 3 3 4 0 2 1 3 2; 1 1 2 2 0 1 1 2; 2 2 3 1 1 0 2 1; 2 2 1 3 1 2 0 1; 3 3 2 2 2 1 1 0]\n",
+      "Initial[0 2 3 3 1 2 2 3; 2 0 3 3 1 2 2 3; 3 3 0 4 2 3 1 2; 3 3 4 0 2 1 3 2; 1 1 2 2 0 1 1 2; 2 2 3 1 1 0 2 1; 2 2 1 3 1 2 0 1; 3 3 2 2 2 1 1 0]\n",
+      "Floyd[0 2 3 3 1 2 2 3; 2 0 3 3 1 2 2 3; 3 3 0 4 2 3 1 2; 3 3 4 0 2 1 3 2; 1 1 2 2 0 1 1 2; 2 2 3 1 1 0 2 1; 2 2 1 3 1 2 0 1; 3 3 2 2 2 1 1 0]\n",
+      "----\n",
+      "---\n",
       "--\n",
-      "adjList123=Dict{Int64,Array}(Pair{Int64,Array}(4, [-4]),Pair{Int64,Array}(-4, [-2, -3, 4]),Pair{Int64,Array}(-3, [3, -4, -1]),Pair{Int64,Array}(2, [-2]),Pair{Int64,Array}(3, [-3]),Pair{Int64,Array}(-1, [-2, -3]),Pair{Int64,Array}(-2, [1, 2, -4, -1]),Pair{Int64,Array}(1, [-2]))--\n",
-      "Dict{Int64,Array}[Dict{Int64,Array}(Pair{Int64,Array}(4, [-3]),Pair{Int64,Array}(-4, [-2, -3, 1, 2]),Pair{Int64,Array}(-3, [4, -4, -1]),Pair{Int64,Array}(2, [-4]),Pair{Int64,Array}(3, [-2]),Pair{Int64,Array}(-1, [-2, -3]),Pair{Int64,Array}(-2, [3, -4, -1]),Pair{Int64,Array}(1, [-4])), Dict{Int64,Array}(Pair{Int64,Array}(4, [-3]),Pair{Int64,Array}(-4, [-2, -3, 3]),Pair{Int64,Array}(-3, [4, -4, -1]),Pair{Int64,Array}(2, [-2]),Pair{Int64,Array}(-2, [1, 2, -4, -1]),Pair{Int64,Array}(-1, [-2, -3]),Pair{Int64,Array}(3, [-4]),Pair{Int64,Array}(1, [-2])), Dict{Int64,Array}(Pair{Int64,Array}(4, [-4]),Pair{Int64,Array}(-4, [-2, -3, 4]),Pair{Int64,Array}(-3, [3, -4, -1]),Pair{Int64,Array}(2, [-2]),Pair{Int64,Array}(3, [-3]),Pair{Int64,Array}(-1, [-2, -3]),Pair{Int64,Array}(-2, [1, 2, -4, -1]),Pair{Int64,Array}(1, [-2]))]\n"
+      "adjList123=Dict{Int64,Array}(Pair{Int64,Array}(4, [-4]),Pair{Int64,Array}(-4, [-2, -3, 4]),Pair{Int64,Array}(-3, [3, -4, -1]),Pair{Int64,Array}(2, [-2]),Pair{Int64,Array}(3, [-3]),Pair{Int64,Array}(-1, [-2, -3]),Pair{Int64,Array}(-2, [1, 2, -4, -1]),Pair{Int64,Array}(1, [-2]))---------------------\n",
+      "---------------------\n",
+      "---------------------\n",
+      "---------------------\n",
+      "---------------------\n",
+      "---------------------\n",
+      "---------------------\n",
+      "---------------------\n",
+      "updated List == Dict{Int64,Array}(Pair{Int64,Array}(7, [1, 2, 5, 8]),Pair{Int64,Array}(4, [5]),Pair{Int64,Array}(2, [7]),Pair{Int64,Array}(3, [6]),Pair{Int64,Array}(5, [7, 6, 4]),Pair{Int64,Array}(8, [7, 6]),Pair{Int64,Array}(6, [3, 5, 8]),Pair{Int64,Array}(1, [7]))\n",
+      "length of list: 8\n",
+      "listToMatrix == [0 0 0 0 0 0 0 0; 0 0 0 0 0 0 0 0; 0 0 0 0 0 0 0 0; 0 0 0 0 0 0 0 0; 0 0 0 0 0 0 0 0; 0 0 0 0 0 0 0 0; 0 0 0 0 0 0 0 0; 0 0 0 0 0 0 0 0]\n",
+      "Matrix1: [0 0 0 0 0 0 1 0; 0 0 0 0 0 0 1 0; 0 0 0 0 0 1 0 0; 0 0 0 0 1 0 0 0; 0 0 0 1 0 1 1 0; 0 0 1 0 1 0 0 1; 1 1 0 0 1 0 0 1; 0 0 0 0 0 1 1 0]\n",
+      "distMatrix[0 0 0 0 0 0 1 0; 0 0 0 0 0 0 1 0; 0 0 0 0 0 1 0 0; 0 0 0 0 1 0 0 0; 0 0 0 1 0 1 1 0; 0 0 1 0 1 0 0 1; 1 1 0 0 1 0 0 1; 0 0 0 0 0 1 1 0]\n",
+      "Matrix2: [0 2 3 3 1 2 2 3; 2 0 3 3 1 2 2 3; 3 3 0 4 2 3 1 2; 3 3 4 0 2 1 3 2; 1 1 2 2 0 1 1 2; 2 2 3 1 1 0 2 1; 2 2 1 3 1 2 0 1; 3 3 2 2 2 1 1 0]\n",
+      "Initial[0 2 3 3 1 2 2 3; 2 0 3 3 1 2 2 3; 3 3 0 4 2 3 1 2; 3 3 4 0 2 1 3 2; 1 1 2 2 0 1 1 2; 2 2 3 1 1 0 2 1; 2 2 1 3 1 2 0 1; 3 3 2 2 2 1 1 0]\n",
+      "Floyd[0 2 3 3 1 2 2 3; 2 0 3 3 1 2 2 3; 3 3 0 4 2 3 1 2; 3 3 4 0 2 1 3 2; 1 1 2 2 0 1 1 2; 2 2 3 1 1 0 2 1; 2 2 1 3 1 2 0 1; 3 3 2 2 2 1 1 0]\n",
+      "----\n",
+      "---\n",
+      "Dict{Int64,Array}[Dict{Int64,Array}(Pair{Int64,Array}(4, [6]),Pair{Int64,Array}(-4, [7, 6, 1, 2]),Pair{Int64,Array}(-3, [4, 5, 8]),Pair{Int64,Array}(2, [5]),Pair{Int64,Array}(3, [7]),Pair{Int64,Array}(-1, [7, 6]),Pair{Int64,Array}(-2, [3, 5, 8]),Pair{Int64,Array}(1, [5])), Dict{Int64,Array}(Pair{Int64,Array}(4, [6]),Pair{Int64,Array}(-4, [7, 6, 3]),Pair{Int64,Array}(-3, [4, 5, 8]),Pair{Int64,Array}(2, [7]),Pair{Int64,Array}(-2, [1, 2, 5, 8]),Pair{Int64,Array}(-1, [7, 6]),Pair{Int64,Array}(3, [5]),Pair{Int64,Array}(1, [7])), Dict{Int64,Array}(Pair{Int64,Array}(4, [5]),Pair{Int64,Array}(-4, [7, 6, 4]),Pair{Int64,Array}(-3, [3, 5, 8]),Pair{Int64,Array}(2, [7]),Pair{Int64,Array}(3, [6]),Pair{Int64,Array}(-1, [7, 6]),Pair{Int64,Array}(-2, [1, 2, 5, 8]),Pair{Int64,Array}(1, [7]))]\n",
+      "Make Distance Matrices\n"
      ]
     }
    ],
@@ -306,13 +358,26 @@
     "#  Floyd Warshall Test with real data\n",
     "function floydWarshall(dists)  # graph is 4x4\n",
     "    n = 8\n",
-    "    \n",
+    "    println(\"Initial\", dists)\n",
     "    for k = 1 : n, i = 1 : n, j = 1 : n\n",
     "        dists[i, j] = min(dists[i, k] + dists[k, j],dists[i,j])\n",
     "    end\n",
     "    return (dists)\n",
     "end\n",
+    "# function floydWarshall(dists)  # graph is 4x4\n",
+    "#     n = 8\n",
+    "#     for i = 1 : n\n",
+    "#         dists[i][i] = 0\n",
+    "#     end\n",
     "\n",
+    "#     for k = 1 : n, i = 1 : n, j = 1 : n\n",
+    "#         d = dists[i][k] + dists[k][j]\n",
+    "#         if d < dists[i][j]\n",
+    "#             dists[i][j] = d\n",
+    "#         end\n",
+    "#     end\n",
+    "#     return (dists)\n",
+    "# end\n",
     "# graph = [0 2 5 3 1 2 4 3;\n",
     "#          2 0 5 3 1 2 4 3;\n",
     "#          5 5 0 4 2 3 1 4;\n",
@@ -443,29 +508,29 @@
     "    return container\n",
     "end\n",
     "\n",
-    "function floydWarshall(dists)  # graph is 4x4\n",
-    "    n = 8\n",
-    "     for i = 1 : n\n",
-    "        dists[i,i] = 0\n",
-    "    end\n",
+    "# function floydWarshall(dists)  # graph is 4x4\n",
+    "#     n = 8\n",
+    "#      for i = 1 : n\n",
+    "#         dists[i,i] = 0\n",
+    "#     end\n",
     "    \n",
-    "    println(\"initial Matrix\",dists)\n",
+    "#     println(\"initial Matrix\",dists)\n",
     "    \n",
-    "    for k = 1 : n, i = 1 : n, j = 1 : n\n",
-    "        d = dists[i, k] + dists[k, j]\n",
-    "        if d < dists[i, j]\n",
-    "            println(\"somethings works\")\n",
-    "            dists[i, j] = d\n",
-    "            println(d, i, j)\n",
-    "        end\n",
-    "    end\n",
-    "    return dists\n",
-    "end\n",
+    "#     for k = 1 : n, i = 1 : n, j = 1 : n\n",
+    "#         d = dists[i, k] + dists[k, j]\n",
+    "#         if d < dists[i, j]\n",
+    "#             println(\"somethings works\")\n",
+    "#             dists[i, j] = d\n",
+    "#             println(d, i, j)\n",
+    "#         end\n",
+    "#     end\n",
+    "#     return dists\n",
+    "# end\n",
     "\n",
     "function listToMatrix(list)\n",
     "    matrix = Array{Int64}(length(list),length(list))\n",
     "    fill!(matrix,0)\n",
-    "\n",
+    "    println(\"length of list: \", length(list))\n",
     "    println(\"listToMatrix == \",matrix)\n",
     "    for i =1:length(list),j=1:length(list)\n",
     "        if(any(x->x==j, list[i])) #if (list[i] conatins j)\n",
@@ -477,49 +542,69 @@
     "\n",
     "function parseAdjList()\n",
     "    adjLists=oneHybridLeaf()\n",
-    "\n",
+    "    \n",
     "    println(\"--------------------------\")\n",
     "    println(\"received adjlist from onehybrid leaf\", adjLists)\n",
     "    \n",
     "    println(\"--------------------------\")\n",
-    "    for i in adjLists\n",
+    "    \n",
+    "    \n",
+    "    for list in adjLists\n",
     "        println(\"--\")\n",
-    "        print(\"adjList123=\",i)\n",
-    "        println(\"--\")\n",
+    "        print(\"adjList123=\",list)\n",
+    "        updatedList = Dict{Int64,Array}()\n",
+    "#         matrix = listToMatrix(list)\n",
+    "        for i in list\n",
+    "    \n",
+    "            a = collect(keys(list))\n",
+    "            max= maximum(a)*2+1\n",
+    "    \n",
+    "            b = collect(values(list))\n",
+    "            conversion = Dict{Int64,Int64}()\n",
+    "            \n",
+    "\n",
+    "           for (key, values) in list\n",
+    "                if(key<0)\n",
+    "                    temp = key\n",
+    "                    key+=max\n",
+    "                    conversion[key]=temp\n",
+    "                end\n",
+    "                for i=1:length(values)\n",
+    "                    if(values[i]<0)\n",
+    "                        values[i]+=max\n",
+    "                    end\n",
+    "                end\n",
+    "#                 println(key, \" ==> \", values)\n",
+    "                updatedList[key] = values\n",
+    "            end\n",
+    "        #     println(\"convertedDict=\",conversion)\n",
+    "        #     println(\"updatedList=\",updatedList)\n",
+    "\n",
+    "            println(\"---------------------\")\n",
+    "\n",
+    "        #      sort(collect(updatedList), by=x->x[2])\n",
+    "\n",
+    "            \n",
+    "        #     maxOfKeys = maximum(keys(updatedList))\n",
+    "        end\n",
+    "        println(\"updated List == \",updatedList)\n",
+    "        matrix= listToMatrix(updatedList)\n",
+    "        println(\"Matrix1: \", matrix)\n",
+    "        matrix2= operateDistMatrix(matrix)\n",
+    "        println(\"Matrix2: \", matrix2)\n",
+    "        println(\"Floyd\",floydWarshall(matrix2))\n",
+    "        println(\"----\")\n",
+    "#         print(\"convert to matrix\",matrix)\n",
+    "        \n",
+    "        println(\"---\")\n",
     "    end\n",
     "    println(adjLists)\n",
-    "#     for i in adjLists\n",
     "    \n",
-    "#     a = collect(keys(adjLists))\n",
-    "#     max= maximum(a)*2+1\n",
+    "    println(\"Make Distance Matrices\")\n",
     "    \n",
-    "#     b = collect(values(adjLists))\n",
-    "#     conversion = Dict{Int64,Int64}()\n",
-    "#     updatedList = Dict{Int64,Array}()\n",
     "    \n",
-    "#    for (key, values) in adjLists\n",
-    "#         if(key<0)\n",
-    "#             temp = key\n",
-    "#             key+=max\n",
-    "#             conversion[key]=temp\n",
-    "#         end\n",
-    "#         for i=1:length(values)\n",
-    "#             if(values[i]<0)\n",
-    "#                 values[i]+=max\n",
-    "#             end\n",
-    "#         end\n",
-    "#         println(key, \" ==> \", values)\n",
-    "#         updatedList[key] = values\n",
-    "#     end\n",
-    "# #     println(\"convertedDict=\",conversion)\n",
-    "# #     println(\"updatedList=\",updatedList)\n",
     "    \n",
-    "#     println(\"---------------------\")\n",
     "    \n",
-    "# #      sort(collect(updatedList), by=x->x[2])\n",
-    "    \n",
-    "#     println(\"updated List == \",updatedList)\n",
-    "# #     maxOfKeys = maximum(keys(updatedList))\n",
     "    \n",
     "#     matrix = listToMatrix(updatedList)\n",
     "    \n",
